@@ -1,3 +1,7 @@
+Wed Apr 26 17:50:39 2000  Andrew Cagney  <cagney@b1.cygnus.com>
+
+	* TODO: Document BFD automake problem.
+
 2000-04-23  Eli Zaretskii  <eliz@is.elta.co.il>
 
 	* TODO, NEWS: Update due to inclusion of gdbmi.texinfo in the GDB
