@@ -1,3 +1,8 @@
+Wed Apr 26 17:57:26 2000  Andrew Cagney  <cagney@b1.cygnus.com>
+
+	* Makefile.in: Rebuild using autoconf/automake snapshot with fixed
+ 	TEXINPUTS bug.
+
 Fri Apr  7 17:54:38 2000  Andrew Cagney  <cagney@b1.cygnus.com>
 
 	* Makefile.in: Rebuild with current autoconf/automake.
